# garooda-core

./: CMakeLists.txt  LICENSE
examples/: CMakeLists.txt  ipe_example.cpp
src/: CMakeLists.txt  cm_log.hpp  common_includes.hpp  computed_result.cpp  computed_result.hpp  cv_image_holder.cpp  cv_image_holder.hpp  function_table.cpp  function_table.hpp  geometric_types.cpp  geometric_types.hpp  helper_macros.hpp  image_holder.cpp  image_holder.hpp  json.hpp  json_reader.cpp  json_reader.hpp  process_block.cpp  process_block.hpp  simple_finder_pipeline.cpp  simple_finder_pipeline.hpp  tracker_pipeline.cpp  tracker_pipeline.hpp  utilities.cpp  utilities.hpp
src/dlib_bridge/: facial_analysis.cpp  facial_analysis.hpp
src/opencv_bridge/: aruco_extraction.cpp  aruco_extraction.hpp  draw_objects.cpp  draw_objects.hpp  facial_analysis.cpp  facial_analysis.hpp  feature_extraction.cpp  feature_extraction.hpp  filters.cpp  filters.hpp  geometric_transform.cpp  geometric_transform.hpp  ml_finder.cpp  ml_finder.hpp  shape_finder.cpp  shape_finder.hpp  shape_finder_impl.cpp  shape_finder_impl.hpp
